# openclaw-server

./: .gitignore  SLACK_SETUP.md  pyproject.toml
config/: clawctl.example.toml
deploy/lightsail/: .gitignore  .lightsail-config.example  00-prepare-ssh.sh  00-rebuild-from-scratch.sh  01-harden-server.sh  02-install-dependencies.sh  03-deploy-openclaw.sh  04-configure-users.sh  05-verify-deployment.sh  06-setup-web-interface.sh  07-deploy-updates.sh  DEVELOPMENT.md  README.md
deploy/lightsail/config/: clawctl.lightsail.toml
deploy/lightsail/docs/: SOP-02-discord-bot-setup.md  SOP-03-tailscale-setup.md
deploy/lightsail/remote/: setup.sh
deploy/lightsail/scripts/: apply-tailscale-serve.sh  check-users.sh  check-web-password.sh  configure-gateway-https.sh  debug-status.sh  debug-tailscale-detection.sh  debug-web-auth.sh  debug-web-interface.sh  enable-tailscale-serve.sh  enable-web-https.sh  fix-agent-stuck.sh  fix-gateway-connection.sh  fix-web-interface.sh  force-regenerate-tailscale.sh  gateway-port-forward.sh  get-urls.sh  load-config.sh  manual-debug-web.sh  provision-all-users.sh  remote-clawctl.sh  (+16 more)
docker/: Dockerfile  entrypoint.sh  healthcheck.sh
docs/: development.md  github-setup.md  index.md  lightsail-docs-index.md  managing-server-files.md  slack-setup.md  sop-01-lightsail-setup.md
src/clawctl/: __init__.py  cli.py
src/clawctl_web/: __init__.py  api.py  auth.py  docker_stats.py  server.py
templates/gtm/: IDENTITY.md  SOUL.md  USER.md
tests/: conftest.py  test_backup_manager.py  test_config.py  test_docker_manager.py  test_user_manager.py
(+57 files in other folders)
