[project]
name = "clawctl"
version = "0.1.0"
description = "OpenClaw deployment manager — provision and manage isolated OpenClaw instances for teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "docker>=7.1",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "schedule>=1.2",
]

[project.scripts]
clawctl = "clawctl.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
